# agenticRag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 28893ed71f5f_add_tenants_table.py  35f2369e5f29_add_session_id_to_chat_logs.py  78f2f19d38a5_add_documents_table.py  c8f3477c47d3_initial.py  e3b297c165fd_add_chat_logs_table.py
app/: celery_app.py  common.py  config.py  main.py
app/agent/: reformulate.py  schemas.py  service.py
app/channels/web/static/: index.html
app/chat/: models.py  prompts.py  router.py  schemas.py  service.py
app/clients/: claude.py  qdrant.py  redis.py
app/db/: base.py  session.py
app/documents/: chunker.py  ingestion.py  models.py  router.py  schemas.py  service.py  tasks.py
app/embeddings/: client.py
app/health/: router.py  schemas.py  service.py
app/retrieval/: schemas.py  service.py
app/security/: rate_limit.py
app/tenants/: dependencies.py  models.py  router.py  schemas.py  security.py  service.py
samples/: acme_handbook.txt
scripts/: demo.sh
tests/: conftest.py
tests/agent/: test_agent.py
tests/channels/: test_web.py
tests/chat/: test_chat.py
tests/documents/: test_chunker.py  test_documents_api.py  test_ingestion.py
tests/embeddings/: test_embedding_client.py
tests/health/: test_health.py
tests/retrieval/: test_retrieval.py
tests/security/: test_rate_limit.py
tests/tenants/: test_tenants.py
